--- a/app/src/main/res/layout/wordlist_item.xml
+++ b/app/src/main/res/layout/wordlist_item.xml
@@ -1,11 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/LinearLayout"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="12dp"
+    android:layout_marginTop="6dp"
+    android:layout_marginRight="12dp"
+    android:layout_marginBottom="6dp"
+    android:layout_weight="1">
 
-    <TextView
-        android:id="@+id/txtWord"
-        style="@style/word_title"
-        android:text="TextView" />
-</LinearLayout>
+    <LinearLayout
+
+        android:id="@+id/LinearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="10">
+
+        <ImageView
+            android:id="@+id/icon"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_margin="16dp"
+            android:layout_weight="1"
+            app:srcCompat="@mipmap/ic_launcher" />
+
+        <TextView
+            android:id="@+id/txtWord"
+            style="@style/word_title"
+            android:layout_margin="16dp"
+            android:layout_weight="9"
+            android:text="TextView" />
+
+
+    </LinearLayout>
+</android.support.v7.widget.CardView>
