--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#FF6E40</color>
+    <color name="blue">#40C4FF</color>
+    <color name="red">#C70F0F</color>
 </resources>
